<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/containerAlanView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/dialogAlanView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:background="@drawable/dialog_bkg"
            android:gravity="center"
            android:minHeight="60dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/messageAlanView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/alan"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:visibility="visible" />

        </LinearLayout>

        <com.szugyi.circlemenu.view.CircleLayout
            android:id="@+id/circleView"
            app:radius="80dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="32dp"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/bulb_32"
                android:text="@string/luce"
                android:textColor="@color/colorTextAlan"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/explosion_32"
                android:gravity="center"
                android:text="@string/gas"
                android:textColor="@color/colorTextAlan"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/call_32"
                android:text="@string/fisso"
                android:textColor="@color/color_disableTextAlan"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/desktop_32"
                android:text="@string/internet"
                android:textColor="@color/color_disableTextAlan"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/phone_32"
                android:text="@string/mobile"
                android:textColor="@color/color_disableTextAlan"
                android:textSize="14sp" />

        </com.szugyi.circlemenu.view.CircleLayout>
    </RelativeLayout>
</LinearLayout>